Use a cache instead of sync.Pool in script processor (#19562)
This updates the script processor to keep a simple cache of Javascript VM
sessions instead of relying on sync.Pool for this task. The size of this
cache can be controlled by the new `max_cached_sessions` option.

The reasoning behind this change is to avoid sync.Pool discarding and
re-allocating new sessions every garbage collection cycle. For large
Javascript pipelines, allocating a new session is a very expensive
operation that can take hundreds of milliseconds or even seconds to
complete. This has a severe impact in ingestion rates.

--- a/CHANGELOG.next.asciidoc
+++ b/CHANGELOG.next.asciidoc
@@ -323,6 +323,7 @@ https://github.com/elastic/beats/compare/v7.0.0-alpha2...master[Check the HEAD d
 - Add the `ignore_failure` configuration option to the dissect processor. {pull}19464[19464]
 - Add the `overwrite_keys` configuration option to the dissect processor. {pull}19464[19464]
 - Add support to trim captured values in the dissect processor. {pull}19464[19464]
+- Added the `max_cached_sessions` option to the script processor. {pull}19562[19562]
 
 *Auditbeat*
 
