--- a/filebeat/docs/fields.asciidoc
+++ b/filebeat/docs/fields.asciidoc
@@ -32,6 +32,7 @@ grouped in the following categories:
 * <<exported-fields-envoyproxy>>
 * <<exported-fields-fortinet>>
 * <<exported-fields-googlecloud>>
+* <<exported-fields-gsuite>>
 * <<exported-fields-haproxy>>
 * <<exported-fields-host-processor>>
 * <<exported-fields-ibmmq>>
@@ -23220,6 +23221,140 @@ type: keyword
 +
 --
 Latency as measured (for TCP flows only) during the time interval. This is the time elapsed between sending a SEQ and receiving a corresponding ACK and it contains the network RTT as well as the application related delay.
+
+
+type: long
+
+--
+
+[[exported-fields-gsuite]]
+== gsuite fields
+
+gsuite Module
+
+
+
+[float]
+=== gsuite
+
+Gsuite specific fields.
+More information about specific fields can be found at https://developers.google.com/admin-sdk/reports/v1/reference/activities/list
+
+
+
+*`gsuite.actor.type`*::
++
+--
+The type of actor.
+Values can be:
+  *USER*: Another user in the same domain.
+  *EXTERNAL_USER*: A user outside the domain.
+  *KEY*: A non-human actor.
+
+
+type: keyword
+
+--
+
+*`gsuite.actor.key`*::
++
+--
+Only present when `actor.type` is `KEY`. Can be the `consumer_key` of the requestor for OAuth 2LO API requests or an identifier for robot accounts.
+
+
+type: keyword
+
+--
+
+*`gsuite.event.type`*::
++
+--
+The type of GSuite event, mapped from `items[].events[].type` in the original payload. Each fileset can have a different set of values for it, more details can be found at https://developers.google.com/admin-sdk/reports/v1/reference/activities/list
+
+
+type: keyword
+
+example: audit#activity
+
+--
+
+*`gsuite.kind`*::
++
+--
+The type of API resource, mapped from `kind` in the original payload. More details can be found at https://developers.google.com/admin-sdk/reports/v1/reference/activities/list
+
+
+type: keyword
+
+example: audit#activity
+
+--
+
+*`gsuite.organization.domain`*::
++
+--
+The domain that is affected by the report's event.
+
+
+type: keyword
+
+--
+
+
+*`gsuite.saml.application_name`*::
++
+--
+Saml SP application name.
+
+
+type: keyword
+
+--
+
+*`gsuite.saml.failure_type`*::
++
+--
+Login failure type. For a list of possible values refer to https://developers.google.com/admin-sdk/reports/v1/appendix/activity/saml.
+
+
+type: keyword
+
+--
+
+*`gsuite.saml.initiated_by`*::
++
+--
+Requester of SAML authentication.
+
+
+type: keyword
+
+--
+
+*`gsuite.saml.orgunit_path`*::
++
+--
+User orgunit.
+
+
+type: keyword
+
+--
+
+*`gsuite.saml.status_code`*::
++
+--
+SAML status code.
+
+
+type: long
+
+--
+
+*`gsuite.saml.second_level_status_code`*::
++
+--
+SAML second level status code.
 
 
 type: long
