[Elastic Agent] Harden permissions and remove encrypted store (#19678)
* Harden permissions, remove encrypted store.

* Add changelog.

* Fix issues with DiskStore error handling.

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -11,6 +11,7 @@
 ==== Breaking changes
 - Rename agent to elastic-agent {pull}17391[17391]
 - Change fleet.yml structure, causes upgraded agent to register as new agent {pull}19248[19248]
+- Remove obfuscation of fleet.yml, causes re-enroll of agent to Fleet {pull}19678[19678]
 
 ==== Bugfixes
 
