[Elastic Agent] Add support for multiple hosts in connection to kibana (#19628)
* Add ability for multiple hosts to be defined for agents connection to kibana.

* Fix reference.

* Add changelog.

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -77,3 +77,4 @@
 - Rename input.type logs to logfile {pull}19360[19360]
 - Agent now installs/uninstalls Elastic Endpoint {pull}19248[19248]
 - Agent now downloads Elastic Endpoint {pull}19503[19503]
+- Agent now load balances across multiple Kibana instances {pull}19628[19628]
