[Elastic Agent] Remove support for "logs" and only support logfile (#19761)
* [Elastic Agent] Remove support for "logs" and only support logfile

We want to move away from logs to `logfile`

Reference: https://github.com/elastic/package-registry/issues/517

* Changelog

--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -46,6 +46,7 @@
 - Fix install service script for windows {pull}18814[18814]
 - Properly stops subprocess on shutdown {pull}19567[19567]
 - Forward revision number of the configuration to the endpoint. {pull}19759[19759]
+- Remove support for logs type and use logfile {pull}19761[19761]
 
 ==== New features
 
