Add support for appinsights in the metricbeat azure module (#18940)
* app

* changelog

* update

* Revert "update"

This reverts commit 06db76bfb796bc0b3948bd502f009130e545cdb1.

* avoid winio

* fix text

--- a/metricbeat/docs/fields.asciidoc
+++ b/metricbeat/docs/fields.asciidoc
@@ -4520,6 +4520,53 @@ type: object
 
 --
 
+[float]
+=== app_insights
+
+application insights
+
+
+
+*`azure.app_insights.application_id`*::
++
+--
+The application ID
+
+
+type: keyword
+
+--
+
+*`azure.app_insights.start_date`*::
++
+--
+The start date
+
+
+type: date
+
+--
+
+*`azure.app_insights.end_date`*::
++
+--
+The end date
+
+
+type: date
+
+--
+
+*`azure.app_insights.metrics.*.*`*::
++
+--
+The metrics
+
+
+type: object
+
+--
+
 *`azure.compute_vm.*.*`*::
 +
 --
