--- a/x-pack/metricbeat/module/azure/_meta/docs.asciidoc
+++ b/x-pack/metricbeat/module/azure/_meta/docs.asciidoc
@@ -27,9 +27,13 @@ The virtual machine scale sets dashboard is similar to the VM dashboard and show
 
 image::./images/metricbeat-azure-vmss-overview.png[]
 
-The Azure storage dashboards dashboards show all relevant metrics for the blob, file, table and queue storage services:
+The Azure storage dashboards show all relevant metrics for the blob, file, table and queue storage services:
 
 image::./images/metricbeat-azure-storage-overview.png[]
+
+The Azure billing dashboards show relevant usage and forecast information:
+
+image::./images/metricbeat-azure-billing-overview.png[]
 
 [float]
 === Module-specific configuration notes
@@ -96,6 +100,11 @@ so the `period` for `container_service` metricset  should be `300s` or multiples
 === `database_account`
 This metricset will collect relevant metrics from specified database accounts, these metrics will have a timegrain every 5 minutes,
 so the `period` for `database_account` metricset  should be `300s` or multiples of `300s`.
+
+[float]
+=== `billing`
+This metricset will collect relevant usage data and forecast information from a specific subscription, these metrics will have a timegrain every 24 hours,
+so the `period` for `billing` metricset  should be `24h` or multiples of `24h`.
 
 [float]
 === `app_insights`
