--- a/x-pack/elastic-agent/CHANGELOG.asciidoc
+++ b/x-pack/elastic-agent/CHANGELOG.asciidoc
@@ -81,3 +81,4 @@
 - Agent now downloads Elastic Endpoint {pull}19503[19503]
 - Refuse invalid stream values in configuration {pull}19587[19587]
 - Agent now load balances across multiple Kibana instances {pull}19628[19628]
+- Configuration cleanup {pull}19848[19848]
