--- a/filebeat/docs/modules/microsoft.asciidoc
+++ b/filebeat/docs/modules/microsoft.asciidoc
@@ -6,21 +6,109 @@ This file is generated! See scripts/docs_collector.py
 [role="xpack"]
 
 :modulename: microsoft
-:has-dashboards: false
+
+== Microsoft module
+
+This is a module for ingesting data from the different Microsoft Products. Currently supports these filesets:
+
+- `defender_atp` fileset: Supports Microsoft Defender ATP
+- `dhcp` fileset: Supports Microsoft DHCP logs
+
+include::../include/gs-link.asciidoc[]
+
+[float]
+=== Compatibility
+
+Currently this module supports Microsoft Defender ATP.
+
+include::../include/configuring-intro.asciidoc[]
+
+:fileset_ex: defender_atp
+
+include::../include/config-option-intro.asciidoc[]
+
+To allow the filebeat module to ingest data from the Microsoft Defender API, you would need to create a new application on your Azure domain.
+
+The procedure to create an application is found on the below link:
+
+https://docs.microsoft.com/en-us/windows/security/threat-protection/microsoft-defender-atp/exposed-apis-create-app-webapp[Create a new Azure Application]
+
+When giving the application the API permissions described in the documentation (Windows Defender ATP Alert.Read.All) it will only grant access to read alerts from ATP and nothing else in the Azure Domain.
+
+After the application has been created, it should contain 3 values that you need to apply to the module configuration.
+
+These values are:
+
+Client ID
+Client Secret
+Tenant ID
+
+[float]
+==== `defender_atp` fileset settings
+
+[source,yaml]
+----
+- module: microsoft
+  defender_atp:
+    enabled: true
+    var.oauth2.client.id: "123abc-879546asd-349587-ad64508"
+    var.oauth2.client.secret: "980453~-Sg99gedf"
+    var.oauth2.token_url: "https://login.microsoftonline.com/INSERT-TENANT-ID/oauth2/token"
+----
+
+include::../include/var-paths.asciidoc[]
+
+*`var.oauth2.client.id`*::
+
+This is the client ID related to creating a new application on Azure.
+
+*`var.oauth2.client.secret`*::
+
+The secret related to the client ID.
+
+*`var.oauth2.token_url`*::
+
+A predefined URL towards the Oauth2 service for Microsoft. The URL should always be the same with the exception of the Tenant ID that needs to be added to the full URL.
+
+[float]
+==== Defender ATP ECS fields
+
+This is a list of Defender ATP fields that are mapped to ECS.
+
+[options="header"]
+|======================================================================|
+| Defender ATP Fields                 | ECS Fields                     |
+| alertCreationTime                   | @timestamp                     |
+| aadTenantId                         | cloud.account.id               |
+| category                            | threat.technique.name          |
+| computerDnsName                     | host.hostname                  |
+| description                         | rule.description               |
+| detectionSource                     | observer.name                  |
+| evidence.fileName                   | file.name                      |
+| evidence.filePath                   | file.path                      |
+| evidence.processId                  | process.pid                    |
+| evidence.processCommandLine         | process.command_line           |
+| evidence.processCreationTime        | process.start                  |
+| evidence.parentProcessId            | process.parent.pid             |
+| evidence.parentProcessCreationTime  | process.parent.start           |
+| evidence.sha1                       | file.hash.sha1                 |
+| evidence.sha256                     | file.hash.sha256               |
+| evidence.url                        | url.full                       |
+| firstEventTime                      | event.start                    |
+| id                                  | event.id                       |
+| lastEventTime                       | event.end                      |
+| machineId                           | cloud.instance.id              |
+| relatedUser.userName                | host.user.name                 |
+| relatedUser.domainName              | host.user.domain               |
+| title                               | message                        |
+| severity                            | event.severity                 |
+|======================================================================|
 
 == Microsoft module
 
 experimental[]
 
-This is a module for receiving Microsoft DHCP logs over Syslog or a file.
-
-include::../include/gs-link.asciidoc[]
-
-include::../include/configuring-intro.asciidoc[]
-
 :fileset_ex: dhcp
-
-include::../include/config-option-intro.asciidoc[]
 
 [float]
 ==== `dhcp` fileset settings
